<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_main_form_meet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
>
    <ScrollView
        android:id="@+id/sv_form_meet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
        <LinearLayout
            android:id="@+id/ll_form_meet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
        >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            >
                <EditText
                    android:id="@+id/et_data_meet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_data_meet"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="date"
                    android:maxLines="1"
                    android:singleLine="true"
                />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            >
                <EditText
                    android:id="@+id/et_time_meet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:freezesText="false"
                    android:hint="@string/prompt_time_meet"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="time"
                    android:maxLines="1"
                    android:singleLine="false"
                />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            >
                <EditText
                    android:id="@+id/et_location_meet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:freezesText="false"
                    android:hint="@string/prompt_location_meet"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:singleLine="false"
                />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/b_add_meet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#5A6C84"
                android:text="Dodaj termin spotkania"
                android:textColor="#F3F3F4"
                android:textStyle="bold"
                style="?android:textAppearanceSmall"
            />
            <Button
                android:id="@+id/b_cancel_meet"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#5A6C84"
                android:text="Anuluj"
                android:textColor="#F3F3F4"
                android:textStyle="bold"
            />
        </LinearLayout>
    </ScrollView>
</LinearLayout>