<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/ll_main_form_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <ScrollView
        android:id="@+id/sv_form_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
        <LinearLayout
            android:id="@+id/ll_form_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
        >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            >
                <EditText
                    android:id="@+id/et_name_client"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name_client"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            >
                <EditText
                    android:id="@+id/et_description_client"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_description_client"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
            >
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                >
                    <TextView
                        android:id="@+id/tv_type_client"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/s_type_client"
                        android:layout_alignBottom="@+id/s_type_client"
                        android:layout_alignParentStart="true"
                        android:layout_weight="1"
                        android:alpha="0.7"
                        android:paddingLeft="5px"
                        android:text="Typ"
                        android:textSize="12sp"
                    />
                    <Spinner
                        android:id="@+id/s_type_client"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:entries="@array/aTypeClient"
                        android:textAlignment="textEnd"
                        style="@style/PickerEditText"
                    />
                </RelativeLayout>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/b_add_client"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#5A6C84"
                android:text="Dodaj klienta"
                android:textColor="#F3F3F4"
                android:textStyle="bold"
                android:visibility="invisible"
            />
            <Button
                android:id="@+id/b_cancel_client"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#5A6C84"
                android:text="Anuluj"
                android:textColor="#F3F3F4"
                android:textStyle="bold"
                android:visibility="invisible"
            />
        </LinearLayout>
    </ScrollView>
</LinearLayout>